# Anime_Denoise

./: .gitignore  README.md
analysis/: CMakeLists.txt  README.md  install.sh  uninstall.sh
analysis/include/animerestore/: defects.h  denoise.h  extend.h  hold_detection.h  motion.h  sidecar.h  types.h
analysis/ofx/: animerestore_plugin.cpp  probe_plugin.cpp
analysis/packaging/: distribution.xml  make_installer.sh
analysis/packaging/resources/: conclusion.html  welcome.html
analysis/src/: defects.cpp  denoise.cpp  extend.cpp  hold_detection.cpp  motion.cpp  sidecar.cpp
analysis/tests/: compare_golden.py  test_sidecar.cpp
analysis/tests/golden/: motion_golden.json
analysis/tests/golden/defects/: expected.json
analysis/tests/golden/synthetic/: denoise_g2.json  hold_groups.json  pair_metrics.json  phash.json
analysis/tools/: ar_cli.cpp  verify_performance.cpp
docs/: cpp_port_design.md  denoise_method_survey.md  design_integration_review.md  detection_engine_architecture.md  detection_engine_decision_log.md  gpu_and_memory_design.md  performance_audit.md  phase0_checklist.md  phase1_phase2_status.md  video_restoration_plugin_architecture.md  video_restoration_research_report.md
docs/reference/: anime_restoration_plugin_architecture.md
prototype/: evaluate_hold_frames.py  evaluate_motion.py  requirements.txt  run_defect_scan.py  run_denoise.py  run_detection.py  run_detection_engine.py  run_full_evaluation.py  run_motion_classification.py  run_pipeline.py  verify_denoise_quality.py
prototype/denoise/: __init__.py  core.py  extend.py  lineart.py  linenoise.py  scannoise.py  scratch.py
prototype/detection_engine/: README.md  __init__.py  analyzer.py  contracts.py  instances.py  io_png.py  noise_profile.py  scratch.py  spatial.py  synth.py  temporal.py  visualize.py
prototype/hold_frame_detection/: __init__.py  core.py  refine.py
prototype/motion_classification/: __init__.py  core.py
prototype/sidecar/: server.py
prototype/tests/: test_detection_engine.py
prototype/tools/: bootstrap_shot_labels.py  generate_golden.py  test_region_segment.py
test-assets/labels/: README.md  shot_labels.csv  shot_labels_template.csv  shot_labels_v0.1.csv  shot_labels_v0.2.csv  shot_labels_v0.3.csv
